--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,14 +14,14 @@ jobs:
 
     runs-on: ubuntu-latest
     env:
-      node-version: 18.x
+      NODE_VERSION: 18.x
     steps:
     - uses: actions/checkout@v3
     
-    - name: Use Node.js $node-version
+    - name: Use Node.js $NODE_VERSION
       uses: actions/setup-node@v3
       with:
-        node-version: $node-version
+        node-version: $NODE_VERSION
         cache: 'npm'
         
     - run: npm ci
