--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,10 +18,10 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     
-    - name: Use Node.js $NODE_VERSION
+    - name: Use Node.js ${NODE_VERSION}
       uses: actions/setup-node@v3
       with:
-        node-version: $NODE_VERSION
+        node-version: ${NODE_VERSION}
         cache: 'npm'
         
     - run: npm ci
