--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,15 +13,14 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    env:
-      NODE_VERSION: 18.x
+
     steps:
     - uses: actions/checkout@v3
     
-    - name: Use Node.js ${NODE_VERSION}
+    - name: Use Node.js 18.x
       uses: actions/setup-node@v3
       with:
-        node-version: ${NODE_VERSION}
+        node-version: 18.x
         cache: 'npm'
         
     - run: npm ci
