--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.6",
+    "bootstrap": "^5.2.2",
     "vue": "^3.2.41"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.1.2",
-    "vite": "^3.1.8"
+    "sass": "^1.55.0",
+    "vite": "^3.2.2"
   }
 }
