--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.6",
+    "@vueup/vue-quill": "^1.0.0",
     "bootstrap": "^5.2.2",
-    "vue": "^3.2.41"
+    "bootstrap-icons": "^1.9.1",
+    "quilljs-markdown": "^1.2.0",
+    "vue": "^3.2.41",
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.1.2",
