--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,10 +1,5 @@
-name: Publish to Github Pages
-on:
-  push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
-  workflow_dispatch:
+name: Build Vue
+on: [push]
 jobs:
   build_vue:
     runs-on: ubuntu-latest
